# data-collector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  rustfmt.toml  taplo.toml
.github/workflows/: cliff.yaml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  fetch.rs  main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  schema.rs  utils.rs
crates/lib/src/schema/: list.rs  species.rs
crates/lib/src/utils/: deserializers.rs  iterators.rs
crates/utils/: Cargo.toml
crates/utils/src/: fs.rs  lib.rs  macros.rs
src/: downloader.rs  lib.rs  main.rs  parse.rs  schema.rs  static.rs  utils.rs
src/downloader/: item.rs  list.rs
src/utils/: deserializers.rs  iterators.rs  macros.rs
