[workspace]
	default-members = ["crates/cli"]
	members         = ["crates/*"]

	[workspace.package]
		authors = [
			"Abiria <abiria.dev@gmail.com>",
		]
		categories = [
			"api-bindings",
			"command-line-utilities",
		]
		edition = "2021"
		keywords = [
			"API",
			"crawler",
			"eco",
			"scraper",
		]
		license = "BSD-3-Clause"
		publish = false
		readme = "README.md"
		repository = "https://github.com/eco3s/data-collector"
		version = "0.1.0"

	[workspace.dependencies]
		serde = { version = "1.0", features = [
			"derive",
		] }
