[package]
name = "cli"
description = "fetch, cache, parse, then collect alien species information"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
lib = { path = "../lib" }
ureq = { version = "2.5.0", features = ["json"] }
url = "2.3.1"
lazy_static = "1.4.0"
