[package]
	authors.workspace    = true
	categories.workspace = true
	description          = "fetch, cache, parse, then collect alien species information"
	edition.workspace    = true
	keywords.workspace   = true
	license.workspace    = true
	name                 = "cli"
	publish.workspace    = true
	readme.workspace     = true
	repository.workspace = true
	version.workspace    = true

[dependencies]
	lazy_static = "1.4.0"
	lib = { path = "../lib" }
	ureq = { version = "2.5.0", features = [
		"json",
	] }
	url = "2.3.1"
	utils = { path = "../utils" }
