[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.3"
paste = "1.0.9"
serde_yaml = "0.9.14"
ron = "0.8.0"
serde-lexpr = "0.1.2"
