[package]
name = "lib"
description = "the main library for data-collector"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
utils = { path = "../utils" }
serde.workspace = true
serde_json = "1.0"
rayon = "1.5.3"
paste = "1.0.9"
serde_yaml = "0.9.14"
ron = "0.8.0"
serde-lexpr = "0.1.2"
