[package]
	authors.workspace    = true
	categories.workspace = true
	description          = "the main library for data-collector"
	edition.workspace    = true
	keywords.workspace   = true
	license.workspace    = true
	name                 = "lib"
	publish.workspace    = true
	readme.workspace     = true
	repository.workspace = true
	version.workspace    = true

[dependencies]
	paste           = "1.0.9"
	rayon           = "1.5.3"
	ron             = "0.8.0"
	serde-lexpr     = "0.1.2"
	serde.workspace = true
	serde_json      = "1.0"
	serde_yaml      = "0.9.14"
	utils           = { path = "../utils" }
