[package]
name = "utils"
description = "utility library for data-collector"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
