[package]
	authors.workspace    = true
	categories.workspace = true
	description          = "utility library for data-collector"
	edition.workspace    = true
	keywords.workspace   = true
	license.workspace    = true
	name                 = "utils"
	publish.workspace    = true
	readme.workspace     = true
	repository.workspace = true
	version.workspace    = true

[dependencies]
	serde.workspace = true
